# akasha

./: .gitignore  Cargo.toml
apps/desktop/: package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/tests/: adapter.rs
apps/desktop/ui/: index.html
apps/desktop/ui/src/: api.ts  editor-roundtrip.test.ts  editor.ts  fallback.ts  live-preview.test.ts  live-preview.ts  main.ts  projection.test.ts  projection.ts  reading.ts  scene-model.test.ts  scene-model.ts  scene.ts  styles.css  types.ts
crates/akasha-cli/: Cargo.toml
crates/akasha-cli/src/: main.rs  render.rs
crates/akasha-cli/tests/: agent_wiring.rs  breadcrumb.rs  context.rs  entity_update.rs  event.rs  init.rs  interface.rs  link.rs  note_creation.rs  record_update.rs  resolve.rs  session_hook_wiring.rs  validate.rs
crates/akasha-core/: Cargo.toml
crates/akasha-core/src/: agent_wiring.rs  context.rs  event.rs  evidence.rs  init.rs  lib.rs  library.rs  link.rs  note_creation.rs  note_edit.rs  note_template.rs  onboarding.rs  project_validation.rs  resolution.rs  session_hook_wiring.rs  state.rs  validation.rs  wikilink.rs  writes.rs
crates/akasha-core/tests/: agent_wiring.rs  context.rs  entity_update.rs  event.rs  init.rs  library.rs  link.rs  note_creation.rs  note_edit.rs  note_template.rs  onboarding.rs  project_validation.rs  record_update.rs  resolution.rs  session_hook_wiring.rs  validation.rs  writes.rs
crates/akasha-core/tests/support/: mod.rs
crates/akasha-mcp/: Cargo.toml
crates/akasha-mcp/src/: lib.rs  main.rs
scripts/: codex-onboarding-smoke.sh  obs_log.py  run-akasha-memory-benchmark.sh  score-memory-benchmark.sh  start-obsidian-mcp.sh
tests/fixtures/codex-onboarding/repository/: Cargo.toml  README.md
tests/fixtures/codex-onboarding/repository/src/: lib.rs
tests/fixtures/codex-onboarding/root/templates/: entity.md
tests/fixtures/memory-benchmark/: README.md  evidence.md  ground-truth.tsv  questions.tsv
tests/fixtures/memory-benchmark/akasha-adapter/root/Meta/: projects.yaml
tests/fixtures/memory-benchmark/akasha-adapter/root/templates/: task.md
tests/fixtures/resolution/repository/: .akasha.toml
tests/fixtures/resolution/repository/nested/: README.md
tests/fixtures/resolution/valid-root/: akasha.toml
tests/fixtures/resolution/valid-root/Global/: README.md
tests/fixtures/resolution/valid-root/Global/entities/: rust-pattern.md
tests/fixtures/resolution/valid-root/Inbox/: README.md
tests/fixtures/resolution/valid-root/Meta/: AGENTS.md  projects.yaml
tests/fixtures/resolution/valid-root/Projects/example/: .akasha-state.toml  index.md  roadmap.md
tests/fixtures/resolution/valid-root/Projects/example/entities/: core.md
tests/fixtures/resolution/valid-root/Projects/example/events/handoffs/: 2026-07-12.md  2026-07-13.md
tests/fixtures/resolution/valid-root/Projects/example/templates/: README.md
tests/fixtures/resolution/valid-root/templates/: README.md
tests/fixtures/validation/notes/: duplicate-key.md  fidelity.md  malformed-yaml.md  missing-frontmatter.md  unknown-schema.md  unsafe-tag.md  unterminated-frontmatter.md  wrong-schema-type.md
tests/fixtures/validation/registries/: duplicate-slug.yaml  empty-path.yaml  invalid-slug.yaml  merge-key.yaml  unknown-field.yaml  unsafe-tag.yaml  valid.yaml  wrong-field-type.yaml
(+3 files in other folders)
