[workspace]
members = ["crates/akasha-core", "crates/akasha-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "=4.6.1", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
serde-saphyr = { version = "=0.0.29", default-features = false, features = ["deserialize"] }
toml = { version = "=1.1.2", default-features = false, features = ["parse", "serde", "std"] }
