[workspace]
members = ["crates/akasha-core", "crates/akasha-cli", "crates/akasha-mcp"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
clap = { version = "=4.6.1", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage"] }
rmcp = { version = "=2.2.0", default-features = false, features = ["macros", "server", "transport-io"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
serde-saphyr = { version = "=0.0.29", default-features = false, features = ["deserialize"] }
sha2 = { version = "=0.11.0", default-features = false }
toml = { version = "=1.1.2", default-features = false, features = ["parse", "serde", "std"] }
tokio = { version = "=1.51.3", default-features = false, features = ["macros", "rt"] }
