[package]
name = "akasha-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "akasha-onboarding-mcp"
path = "src/main.rs"

[dependencies]
akasha-core = { path = "../akasha-core" }
clap.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
sha2.workspace = true
