[package]
name = "akasha-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[features]
default = []
desktop = ["dep:tauri"]

[dependencies]
akasha-core = { path = "../../../crates/akasha-core" }
serde.workspace = true
tauri = { workspace = true, optional = true }

[build-dependencies]
tauri-build.workspace = true

[[bin]]
name = "akasha-desktop"
path = "src/main.rs"
required-features = ["desktop"]
